cluster/apps/glace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glace
  labels:
    name: glace
